--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,48 @@
- html, body { height: 100%; margin: 0; padding: 0; }
-      #map { height: 100%; }
-      .searchbar {
-      position: absolute;
-      top: 25px;
-      left: 10px;
-      width: 20%;
-      height: 50%;
-      background-color: rgba(255,255,255, 0.9);
-      border: 1px solid gray;
-      padding: 15px 10px;
-    }
+html, body { height: 100%; margin: 0; padding: 0; }
+      #map { height: 100%;}
+
+
+@media only screen and (max-width: 750px) {
+  .searchbar {
+    position: absolute;
+    top: 50px;
+    margin-left: 3%;
+    width: 85%;
+    background-color: rgba(255,255,255, 0.9);
+    border: 1px solid gray;
+    padding: 15px 10px;
+  }
+
+  .databar {
+    position: absolute;
+    top: 70%;
+    margin-left: 3%;
+    width: 85%;
+    background-color: rgba(123, 234, 223, 0.9);
+    border: 1px solid gray;
+    padding: 15px 10px;
+  }
+}
+
+@media only screen and (min-width: 751px) {
+  .searchbar {
+    position: absolute;
+    float: left;
+    top: 50px;
+    margin-left: 3%;
+    width: 10%;
+    background-color: rgba(255,255,255, 0.9);
+    border: 1px solid gray;
+    padding: 15px 10px;
+  }
+
+  .databar {
+    position: absolute;
+    top: 50px;
+    margin-left: 60%;
+    width: 35%;
+    background-color: rgba(123, 234, 223, 0.9);
+    border: 1px solid gray;
+    padding: 15px 10px;
+  }
+}
