--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,125 @@
-html, body { height: 100%; margin: 0; padding: 0; }
-      #map { height: 100%;}
+* {
 
-
-@media only screen and (max-width: 750px) {
-  .searchbar {
-    position: absolute;
-    top: 50px;
-    margin-left: 3%;
-    width: 85%;
-    background-color: rgba(255,255,255, 0.9);
-    border: 1px solid gray;
-    padding: 15px 10px;
-  }
-
-  .databar {
-    position: absolute;
-    top: 70%;
-    margin-left: 3%;
-    width: 85%;
-    background-color: rgba(123, 234, 223, 0.9);
-    border: 1px solid gray;
-    padding: 15px 10px;
-  }
+font-family:"Open Sans", sans-serif;
 }
 
-@media only screen and (min-width: 751px) {
-  .searchbar {
-    position: absolute;
-    float: left;
-    top: 50px;
-    margin-left: 3%;
-    width: 10%;
-    background-color: rgba(255,255,255, 0.9);
-    border: 1px solid gray;
-    padding: 15px 10px;
-  }
+.search {
 
-  .databar {
-    position: absolute;
-    top: 50px;
-    margin-left: 60%;
-    width: 35%;
-    background-color: rgba(123, 234, 223, 0.9);
-    border: 1px solid gray;
-    padding: 15px 10px;
-  }
+position:fixed;
+left:25px;
+top:25px;
+height:35px;
+width:35%;
 }
+
+
+
+.search-bar/*,.list-view-heading*/ {
+
+
+margin-top: 80%;
+width:50%;
+font-size:16px;
+outline:0;
+border:1px solid #b8b894;
+font-weight:200;
+padding:5px 5px 5px 10px;
+}
+
+.search-bar[placeholder] {
+overflow:hidden;
+text-overflow:ellipsis;
+}
+
+
+
+.list {
+list-style-type:none;
+text-align: right;
+background-color: rgb(153, 190, 253);
+border: 1px solid gray;
+padding: 15px 10px;
+font-weight: bold;
+}
+
+.list li {
+font-size:12pt;
+cursor:pointer;
+padding:5px 0;
+}
+
+.list li:hover {
+background:rgb(245,153,24);
+color:#fff;
+}
+
+.content img {
+max-width:100%;
+}
+
+.msgbox {
+display:none;
+z-index:400;
+position:fixed;
+bottom:40px;
+left:5%;
+}
+
+body,#map-canvas {
+height:100%;
+}
+
+@mediamax-width767px{
+.search {
+z-index:100;
+position:fixed;
+top:10px;
+left:5%;
+height:35px;
+width:75%;
+}
+
+.list-view-content {
+z-index:100;
+position:fixed;
+top:50px;
+left:5%;
+right:5%;
+width:90%;
+}
+
+.list-view-heading {
+position:fixed;
+top:10px;
+right:5%;
+width:10%;
+height:35px;
+}
+
+.list-view-heading-title {
+display:none;
+}
+
+.list-view-heading .chevron {
+margin:0 auto;
+}
+
+.list li {
+font-size:9pt;
+cursor:pointer;
+padding:3px 0;
+}
+
+.content {
+width:200px;
+font-size:10px;
+}
+
+.content .row {
+margin:0;
+}
+
+.search-bar,.content h3 {
+font-size:14px;
+}
+
