--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -26,7 +26,7 @@
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
-    background: #000;
+    background: rgb(153, 190, 253);
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -38,7 +38,7 @@
 }
 
 #page-content-wrapper {
-    width: 100%;
+    width: 50%;
     position: absolute;
     padding: 15px;
 }
