--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,8 @@ body,
 .menu {
     background-color: rgb(153, 190, 253);
 }
+.title {
+    font-weight: 900;
+    font-size: 16px;
+    padding: 1em 1em;
+}
